Finishing the game

--- a/Labyrinth/src/parser/ast/.gitignore
+++ b/Labyrinth/src/parser/ast/.gitignore
@@ -55,3 +55,10 @@
 /ASTKeyboardOn.java
 /ASTFreeze.java
 /ASTAnswer.java
+/LabyrinthGrammar.java
+/LabyrinthGrammar.jj
+/LabyrinthGrammarTokenManager.java
+/ASTArrayInvoke.java
+/ASTArrayAssignment.java
+/ASTArrayDef.java
+/ASTArrayParamList.java
